tmm 2/12/23 - created auto routine to score, drive over charge station and out of community, then auto balance